bluec-tests/tests/invalid/types_fn_pointer/cast_fn_ptr_to_fn_type.c
int main(void) {
    int (*fn)(void) = 0;
    (int (void)) fn;
    return 0;
}